logo change layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="wrapper">
       <header>
         <h1>Qtranslate-slug</h1>
-        <p>Wordpress Plugin that extend Qtranslate</p>
+        <p>Adds support for permalink translations and fix some QTranslate deficiencies since wordpress 3.0</p>
+		<p><img src="https://codingsomething.files.wordpress.com/2012/06/qts-logo3.png" alt="Qtranslate Slug logo" style="width: 100% !important; height: auto !important"></p>
         <p class="view"><a href="https://github.com/not-only-code/qtranslate-slug">View the Project on GitHub <small>not-only-code/qtranslate-slug</small></a></p>
         <ul>
           <li><a href="https://github.com/not-only-code/qtranslate-slug/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -26,10 +27,6 @@
       </header>
       <section>
         <h1>Qtranslate Slug</h1>
-
-<p><img src="https://codingsomething.files.wordpress.com/2012/06/qts-logo3.png?w=200" alt="Qtranslate Slug logo"></p>
-
-<p>Adds support for permalink translations and fix some QTranslate deficiencies since wordpress 3.0</p>
 
 <h2>Description</h2>
 
